# openfang

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Hướng dẫn IMV.md  docker-compose.yml
.agents/workflows/: upstream-sync.md
Portal/: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml
Portal/src/: db.rs  handlers.rs  html.rs  main.rs  models.rs
Portal/src/channels/: mod.rs  telegram.rs
agents/accountant/: agent.toml
agents/brand-strategist/: agent.toml
agents/business-analyst/: agent.toml
agents/compliance/: agent.toml
agents/content-creator/: agent.toml
agents/cx-manager/: agent.toml
agents/data-engineer/: agent.toml
agents/ecommerce/: agent.toml
agents/education-tutor/: agent.toml
agents/healthcare-advisor/: agent.toml
agents/hr-manager/: agent.toml
agents/legal-vn/: agent.toml
agents/logistics/: agent.toml
agents/marketing-strategist/: agent.toml
agents/procurement/: agent.toml
agents/product-manager/: agent.toml
agents/project-manager/: agent.toml
agents/real-estate/: agent.toml
agents/seo-specialist/: agent.toml
agents/startup-advisor/: agent.toml
agents/ui-designer/: agent.toml
crates/bizclaw-portal/: Cargo.toml
crates/bizclaw-portal/src/: lib.rs  models.rs
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: lib.rs  middleware.rs  portal.rs  routes.rs  server.rs  tenants.rs  webchat.rs
crates/openfang-api/static/: index_body.html
crates/openfang-channels/src/: bridge.rs  lib.rs  zalo.rs
crates/openfang-hands/src/: registry.rs
crates/openfang-kernel/: Cargo.toml
(+14 files in other folders)
